// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds polyline correctly 1`] = `
Object {
  "euclideanLength": 0,
  "mileLength": 0,
  "segments": Array [
    Object {
      "end": Array [
        0,
        0,
      ],
      "euclideanDistance": 0,
      "mileDistance": 0,
      "start": Array [
        0,
        0,
      ],
    },
  ],
}
`;

exports[`builds polyline correctly 2`] = `
Object {
  "euclideanLength": 5,
  "mileLength": 345.662,
  "segments": Array [
    Object {
      "end": Array [
        0,
        5,
      ],
      "euclideanDistance": 5,
      "mileDistance": 345.662,
      "start": Array [
        0,
        0,
      ],
    },
  ],
}
`;

exports[`builds polyline correctly 3`] = `
Object {
  "euclideanLength": 8.485281374238571,
  "mileLength": 586.072,
  "segments": Array [
    Object {
      "end": Array [
        2,
        2,
      ],
      "euclideanDistance": 2.8284271247461903,
      "mileDistance": 195.516,
      "start": Array [
        0,
        0,
      ],
    },
    Object {
      "end": Array [
        4,
        4,
      ],
      "euclideanDistance": 2.8284271247461903,
      "mileDistance": 195.397,
      "start": Array [
        2,
        2,
      ],
    },
    Object {
      "end": Array [
        6,
        6,
      ],
      "euclideanDistance": 2.8284271247461903,
      "mileDistance": 195.159,
      "start": Array [
        4,
        4,
      ],
    },
  ],
}
`;

exports[`computes arbitrary point of polyline 1`] = `
Array [
  34.96464425,
  -119.29816199999999,
]
`;

exports[`computes arbitrary point of polyline 2`] = `
Array [
  35.5264286,
  -119.9210868,
]
`;

exports[`computes arbitrary point of polyline 3`] = `
Array [
  37.024520200000005,
  -121.5822196,
]
`;

exports[`computes the midpoint of the polyline 1`] = `
Array [
  35.91355,
  120.33155,
]
`;

exports[`gets the distance in miles between two coordinates 1`] = `347.618`;

exports[`gets the euclidean distance between two points 1`] = `4.242640687119285`;
